--- a/Dockerfile_twitter_bot_app
+++ b/Dockerfile_twitter_bot_app
@@ -1,5 +1,5 @@
-# Use an official lightweight Python image.
-FROM python:3.10
+# Use an official lightweight Python image based on Debian Buster.
+FROM python:3.10-buster
 
 # Set the working directory in the container.
 WORKDIR /app
@@ -17,7 +17,7 @@ RUN mkdir -p ./datasets/evaluation_data
 # Copy the .storage directory to the container
 COPY .storage ./.storage
 
-# Install the Google Cloud Logging agent (Fluentd)
+# Install the Google Cloud Logging agent (Fluentd) for Debian Buster.
 RUN curl -sSO https://dl.google.com/cloudagents/install-logging-agent.sh && \
     bash install-logging-agent.sh
 
