--- a/Dockerfile_twitter_bot_app
+++ b/Dockerfile_twitter_bot_app
@@ -1,5 +1,5 @@
-# Use an official lightweight Python image based on Debian Buster.
-FROM python:3.10-buster
+# Use an official lightweight Python image.
+FROM python:3.10
 
 # Set the working directory in the container.
 WORKDIR /app
@@ -16,10 +16,6 @@ RUN mkdir -p ./datasets/evaluation_data
 
 # Copy the .storage directory to the container
 COPY .storage ./.storage
-
-# Install the Google Cloud Logging agent (Fluentd) for Debian Buster.
-RUN curl -sSO https://dl.google.com/cloudagents/install-logging-agent.sh && \
-    bash install-logging-agent.sh
 
 # Install Google Cloud SDK
 RUN apt-get update -y && apt-get install -y --no-install-recommends \
