fix: chrome options and driver from utils and Dockerfile_twitter_bot_app

--- a/Dockerfile_twitter_bot_app
+++ b/Dockerfile_twitter_bot_app
@@ -17,6 +17,33 @@ RUN mkdir -p ./datasets/evaluation_data
 # Copy the .storage directory to the container
 COPY .storage ./.storage
 
+# Install system dependencies required for Python and Chrome
+RUN apt-get update && apt-get install -y \
+    wget \
+    unzip \
+    xvfb \
+    libxi6 \
+    libgconf-2-4 \
+    && apt-get clean \
+    && rm -rf /var/lib/apt/lists/*
+
+# Install Google Chrome.
+RUN wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | apt-key add - \
+    && echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google-chrome.list \
+    && apt-get update \
+    && apt-get install -y google-chrome-stable
+
+# Install ChromeDriver.
+RUN CHROME_DRIVER_VERSION=$(curl -sS chromedriver.storage.googleapis.com/LATEST_RELEASE) \
+    && wget -O /tmp/chromedriver_linux64.zip http://chromedriver.storage.googleapis.com/$CHROME_DRIVER_VERSION/chromedriver_linux64.zip \
+    && unzip /tmp/chromedriver_linux64.zip -d /usr/local/bin/ \
+    && rm /tmp/chromedriver_linux64.zip \
+    && chmod +x /usr/local/bin/chromedriver
+
+# Set display port and disable GPU for Chrome to run headlessly.
+ENV DISPLAY=:99
+ENV PYTHONUNBUFFERED=1
+
 # Install required packages to add Google Cloud SDK repository
 RUN apt-get update -y && apt-get install -y --no-install-recommends \
     apt-transport-https \
