refactor: track chromium/ on lfs

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,5 @@
 src/chromium/** filter=lfs diff=lfs merge=lfs -text
+src/chromium/chrome-linux64/chrome filter=lfs diff=lfs merge=lfs -text
+src/chromium/chromedriver-linux64/chromedriver filter=lfs diff=lfs merge=lfs -text
+chromium/chromedriver-linux64/chromedriver filter=lfs diff=lfs merge=lfs -text
+chromium/chrome-linux64/chrome filter=lfs diff=lfs merge=lfs -text
