fix: add take_screenshot private member variable and env variable

--- a/Dockerfile_twitter_bot_app
+++ b/Dockerfile_twitter_bot_app
@@ -37,7 +37,8 @@ RUN wget -O chrome-linux64.zip https://edgedl.me.gvt1.com/edgedl/chrome/chrome-f
 RUN wget -O chromedriver_linux64.zip https://edgedl.me.gvt1.com/edgedl/chrome/chrome-for-testing/121.0.6167.85/linux64/chromedriver-linux64.zip \
     && unzip chromedriver_linux64.zip -d /usr/local/bin/ \
     && rm chromedriver_linux64.zip \
-    && chmod +x /usr/local/bin/chromedriver
+    && chmod +x /usr/local/bin/chromedriver \
+    && ls -lah /usr/local/bin/ # Add this line for debugging
 
 # Set display port and disable GPU for Chrome to run headlessly.
 ENV DISPLAY=:99
