--- a/.gitattributes
+++ b/.gitattributes
@@ -5,3 +5,4 @@ chromium/chromedriver-linux64/chromedriver filter=lfs diff=lfs merge=lfs -text
 chromium/chrome-linux64/chrome filter=lfs diff=lfs merge=lfs -text
 pipeline_storage/docstore_2024-03-12.json filter=lfs diff=lfs merge=lfs -text
 src/local_chromium/chrome-linux64/chrome filter=lfs diff=lfs merge=lfs -text
+pipeline_storage/docstore_2024-03-12.json filter=lfs diff=lfs merge=lfs -text
