--- a/requirements.txt
+++ b/requirements.txt
@@ -95,7 +95,11 @@ llama-index-program-openai==0.1.4
 llama-index-question-gen-openai==0.1.3
 llama-index-readers-file==0.1.6
 llama-index-readers-llama-parse==0.1.3
+llama-index-storage-docstore-redis==0.1.2
+llama-index-storage-kvstore-redis==0.1.2
 llama-index-vector-stores-chroma==0.1.5
+llama-index-vector-stores-pinecone==0.1.4
+llama-index-vector-stores-redis==0.1.2
 llama-parse==0.3.5
 llamaindex-py-client==0.1.13
 loguru==0.7.2
@@ -138,7 +142,7 @@ pdfminer==20191125
 pdfminer.six==20231228
 pikepdf==8.6.0
 Pillow==10.1.0
-pinecone-client==2.2.4
+pinecone-client==3.1.0
 posthog==3.5.0
 proto-plus==1.22.3
 protobuf==4.25.0
@@ -166,6 +170,7 @@ pytz==2023.3.post1
 pyxnat==1.6
 PyYAML==6.0.1
 rdflib==7.0.0
+redis==5.0.2
 regex==2023.10.3
 requests==2.31.0
 requests-file==1.5.1
